--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,3 @@
-version: '3.1'
 name: tidy-url
 services:
   app:
@@ -8,11 +7,11 @@ services:
     develop:
       watch:
         - action: sync
-          path: ./**/*.go
+          path: ./*.go
           target: /app
           ignore: 
-            - ./**/*_mock.go
-            - ./**/*_test.go
+            - "*_mock.go"
+            - "*_test.go"
     env_file:
       - .env
     ports:
